@@ -3,6 +3,7 @@ tailor.state
 tailor.state.old
 tailor.state.journal
 ./build-stamp
+./install-stamp
 debian/build
 debian/files
 debian/oem-config
